--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Microanswer</title>
-    <style>
-        h1 {
-            text-align: center;
-            margin-top: 100px;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://www.microanswer.cn">
 </head>
 <body>
-<h1>Hello Microanswer.</h1>
+redirecting...
 </body>
 </html>
